[project]
name = "fll-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pybricks>=3.6.1",
    "pybricksdev>=2.3.2",
]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

# Ignore missing imports for any underlying MicroPython modules
[[tool.mypy.overrides]]
module = [
    "pybricks.*",
    "urandom",
    "usys",
    "umath"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.3.3",
]
