[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fll-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pybricks>=3.6.1",
    "pybricksdev>=2.3.2",
]

[project.scripts]
check = "tasks:check"
format = "tasks:format_code"
run = "tasks:run_mission"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.mypy]
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pybricks.*", "urandom", "usys", "umath"]
ignore_missing_imports = true

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.3.3"]

[tool.uv]
managed = true
package = true

[tool.hatch.build.targets.wheel]
packages = ["harness", "projects", "tasks.py"]
